--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#slider-7">AGENDA</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header6-8">VIDEO</a></li><li class="nav-item"><a class="nav-link link" href="index.html#map1-a">LOCATION</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#header4-0">HOME</a></li><li class="nav-item"><a class="nav-link link" href="index.html#slider-7">AGENDA</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header6-8">VIDEO</a></li><li class="nav-item"><a class="nav-link link" href="index.html#map1-a">LOCATION</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header4-0" data-bg-video="https://www.youtube.com/embed/eCnbRyk0sXk?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header4-0" data-bg-video="https://www.youtube.com/embed/eCnbRyk0sXk?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
